--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
   background-color:#8b6f6f;
   color:yellow;
   width:40%;
-  margin:auto;
+  margin:30px auto;
   padding:50px 20px;
-  border-radius:10px;
+  border-radius:7px;
   box-shadow: 5px 5px 5px grey;
+}
+   #btn{
+    width: fit-content;
+    background-color:rgb(9, 248, 228);
+    color: black;
+    padding: 10px 15px;
+    margin: 10px auto;
+    border-radius: 10px;
+    cursor: pointer;
 }
  </style>
 </head>
 
 <body><div style="   display: flex;
     align-items: center;
- justify-content: center; height: 100vh;">
+ justify-content: center; height: 100vh; flex-direction:column;">
     <div id="jokes">
-  
+   <button id="btn" onClick="window.location.reload()">Reload</button>
     </div>
 </div>
 
