--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     border-radius: 10px;
     cursor: pointer;
 }
+   #btn:hover{
+    background-color:rgb(9, 183, 168);
+}
  </style>
 </head>
 
